file(GLOB_RECURSE C_SOURCES CONFIGURE_DEPENDS "*.c")
file(GLOB_RECURSE CXX_SOURCES CONFIGURE_DEPENDS "*.cpp")
set(ALL_SOURCES ${C_SOURCES} ${CXX_SOURCES})

if(ALL_SOURCES)
    add_library(impl_algo STATIC ${ALL_SOURCES})
    target_link_libraries(impl_algo PUBLIC headers_impl_algo)
else()
    message(WARNING "No sources found in src/ for target impl_algo")
endif()
